# tdd-cpp

./: CMakeLists.txt  README.md  cook.h  creator.h  foo.cc  foo.h  food.h  main.cc  waiter.h
test/: creator_mock.cc  foo_mock.cc  foo_test.cc  main.cc  waiter_test.cc
